[workspace]
resolver = "2"
members = [
  "contracts/arya_fund",
  "contracts/arya_registry",
  "contracts/arya_staking",
  "contracts/arya_crowdfunding",
  "contracts/arya_launchpad",
]

[workspace.dependencies]
soroban-sdk = "25.3.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
